--- a/CampaignCompanion/CampaignCompanion/Views/Profile.xaml
+++ b/CampaignCompanion/CampaignCompanion/Views/Profile.xaml
@@ -4,8 +4,12 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="CampaignCompanion.Views.AllNpcs">
-    <StackLayout>
-        <Label Text="bfkjhrkhtreh"/>
-    </StackLayout>
+             x:Class="CampaignCompanion.Views.Profile">
+    <ContentPage.Content>
+        <StackLayout>
+            <Label Text="Welcome to Xamarin.Forms!"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" />
+        </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
