--- a/CampaignCompanion/CampaignCompanion/Views/StatsAndSkills.xaml
+++ b/CampaignCompanion/CampaignCompanion/Views/StatsAndSkills.xaml
@@ -4,12 +4,388 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="CampaignCompanion.Views.StatsAndSkills">
+             xmlns:constants="clr-namespace:CampaignCompanion;assembly=CampaignCompanion"
+             x:Class="CampaignCompanion.Views.StatsAndSkills"
+             xmlns:viewModel="clr-namespace:CampaignCompanion.ViewModel"
+             x:DataType="{x:Type viewModel:StatsAndSkillsViewModel}">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <ScrollView>
+            <StackLayout>
+                <Grid HorizontalOptions="Center" BackgroundColor="#c8b293" Margin="10, 20, 10, 0" Padding="5, 5, 5, 5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"  
+                    Keyboard="Numeric"
+                    Grid.Row="0" Grid.Column="0"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"     
+                    Keyboard="Numeric"
+                    Grid.Row="0" Grid.Column="1"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"     
+                    Keyboard="Numeric"
+                    Grid.Row="0" Grid.Column="2"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Armour Class"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="1" Grid.Column="0"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Initiative"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="1" Grid.Column="1"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Speed"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="1" Grid.Column="2"/>
+                </Grid>
+                <Grid HorizontalOptions="Center" BackgroundColor="#c8b293" Margin="10, 20, 10, 0" Padding="5, 5, 5, 5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"  
+                    Keyboard="Numeric"
+                    Grid.Row="0" Grid.Column="0"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"     
+                    Keyboard="Numeric"
+                    Grid.Row="0" Grid.Column="1"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Hit Points"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="1" Grid.Column="0"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Hit Dice"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="1" Grid.Column="1"/>
+                </Grid>
+                <Grid HorizontalOptions="Center" BackgroundColor="#c8b293" Margin="10, 20, 10, 0" Padding="5, 5, 5, 5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"  
+                    Keyboard="Numeric"
+                    Grid.Row="0" Grid.Column="0"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"     
+                    Keyboard="Numeric"
+                    Grid.Row="0" Grid.Column="1"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"     
+                    Keyboard="Numeric"
+                    Grid.Row="0" Grid.Column="2"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Strength"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="1" Grid.Column="0"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Dexterity"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="1" Grid.Column="1"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Constitution"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="1" Grid.Column="2"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"    
+                    Keyboard="Numeric"
+                    Grid.Row="2" Grid.Column="0"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"   
+                    Keyboard="Numeric"
+                    Grid.Row="2" Grid.Column="1"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"   
+                    Keyboard="Numeric"
+                    Grid.Row="2" Grid.Column="2"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Intelligence"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="3" Grid.Column="0"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Wisdom"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="3" Grid.Column="1"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Charisma"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="3" Grid.Column="2"/>
+                </Grid>
+                <Grid HorizontalOptions="Center" BackgroundColor="#c8b293" Margin="10, 20, 10, 0" Padding="5, 5, 5, 5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"  
+                    Keyboard="Numeric"
+                    Grid.Row="0" Grid.Column="0"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"     
+                    Keyboard="Numeric"
+                    Grid.Row="0" Grid.Column="1"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"     
+                    Keyboard="Numeric"
+                    Grid.Row="0" Grid.Column="2"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Inspiration"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="1" Grid.Column="0"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Proficiency Bonus"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="1" Grid.Column="1"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Passive Wisdom"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="1" Grid.Column="2"/>
+                </Grid>
+                <Grid HorizontalOptions="Center" BackgroundColor="#c8b293" Margin="10, 20, 10, 0" Padding="5, 5, 5, 5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"  
+                    Keyboard="Numeric"
+                    Grid.Row="0" Grid.Column="0"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"     
+                    Keyboard="Numeric"
+                    Grid.Row="0" Grid.Column="1"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"     
+                    Keyboard="Numeric"
+                    Grid.Row="0" Grid.Column="2"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Strength"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="1" Grid.Column="0"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Dexterity"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="1" Grid.Column="1"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Constitution"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="1" Grid.Column="2"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"    
+                    Keyboard="Numeric"
+                    Grid.Row="2" Grid.Column="0"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"   
+                    Keyboard="Numeric"
+                    Grid.Row="2" Grid.Column="1"/>
+                    <Entry
+                    Placeholder="0" 
+                    PlaceholderColor="#f4efe8"
+                    FontSize="20"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    WidthRequest="10"   
+                    Keyboard="Numeric"
+                    Grid.Row="2" Grid.Column="2"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Intelligence"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="3" Grid.Column="0"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Wisdom"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="3" Grid.Column="1"/>
+                    <Label                    
+                    FontSize="15"
+                    Text="Charisma"
+                    HorizontalTextAlignment="Center"
+                    TextColor="#161616"
+                    Grid.Row="3" Grid.Column="2"/>
+                </Grid>
+                <ListView  Margin="5,5,5,5" BackgroundColor="AliceBlue" x:Name="allSkills" x:FieldModifier="public" ItemsSource="{Binding Skills}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="50" />
+                                    </Grid.ColumnDefinitions>
+                                    <Label Grid.Column="0" Text="{Binding Name}" TextColor="#161616"/>
+                                    <Entry Grid.Column="1" Placeholder="{Binding Ammount}" TextColor="#161616"/>
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>                            
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
