base app with most pages for player

--- a/CampaignCompanion/CampaignCompanion/Views/MainPage.xaml
+++ b/CampaignCompanion/CampaignCompanion/Views/MainPage.xaml
@@ -10,7 +10,7 @@
         <local:MasterPage x:Name="masterPage" />
     </MasterDetailPage.Master>
     <MasterDetailPage.Detail>
-        <NavigationPage BarBackgroundColor="Black">
+        <NavigationPage BarBackgroundColor="#161616">
             <x:Arguments>
                 <local:MyCharacter />
             </x:Arguments>
